modify fog color & add fog particles